# uuinfofp.github.io

./: .gitignore  .gitlab-ci.yml  applyAllFold.html  applyAllFold.md  description.md  exams.html  exams.md  exercises.html  exercises.md  exercises.org  exercises_old_md.txt  fp-website.cabal  index.html  index.md  index.org  labs.html  labs.md  lectures.html  lectures.md  optional.html  optional.md  penpaper.md  site.hs  solutions.html  solutions.md  stack.yaml  ta-welcome  teaching_objectives.md  trees.org  type_inference.html  type_inference.org
css/: bootstrap.min.css  syntax.css
exams/: 20191001-answers.hs  20191107-answers.hs  20201006-answers.hs  20201105-answers.hs  20211005-answers.hs  20211111-answers.hs  20221006-answers.hs  20221110-answers.hs  20231005-answers.hs  20231109-answers.hs  20241003-answers.hs  20241003_answers.hs  20241107-answers.hs  20251002-answers.hs  20251106-answers.hs
exercises/: basics.html  basics.org  basics.solutions.html  case_studies.html  case_studies.org  case_studies.solutions.html  datastructures.html  datastructures.org  datatypes.html  datatypes.org  datatypes.solutions.html  exercise.hs  extra_testing.org.notworking  foldr.html  foldr.org  foldr.solutions.html  functor_monad.html  functor_monad.org  functor_monad.solutions.html  functors_monads.md  getting_started.html  getting_started.org  hof.html  hof.org  hof.solutions.html  io.html  io.org  io.solutions.html  laws_and_induction.html  laws_and_induction.md  laws_and_induction.org  laws_and_induction.solutions.html  lazy.html  lazy.md  lazy.org  lazy.solutions.html  (+12 more)
(+41 files in other folders)
