name:                fp-website
version:             0.1.0.0
author:              Alejandro Serrano Mena
maintainer:          A.SerranoMena@uu.nl
build-type:          Simple
cabal-version:       >= 1.10

executable fp-website
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5,
                       hakyll >= 4.13,
                       pandoc
